[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui/PausePopup.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/agane/Agane╠Ç 55 (roman).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 2 )

[node name="PausePopup" type="Node2D"]
pause_mode = 2
z_index = 1
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 523.0
margin_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 509.0
margin_bottom = 306.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 502.0
margin_bottom = 64.0
alignment = 1

[node name="Header" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 358.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 502.0
margin_bottom = 299.0
custom_constants/separation = 20

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 293.0
margin_bottom = 231.0
size_flags_horizontal = 0
custom_constants/separation = 5

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/Buttons"]
margin_right = 188.0
margin_bottom = 54.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/Buttons"]
margin_top = 59.0
margin_right = 173.0
margin_bottom = 113.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/Buttons"]
margin_top = 118.0
margin_right = 197.0
margin_bottom = 172.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="BackToMain" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2/Buttons"]
margin_top = 177.0
margin_right = 293.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 5 )
text = "Mode Select"

[node name="SelectArrow" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 313.0
margin_right = 342.0
margin_bottom = 231.0
custom_constants/separation = 13

[node name="Resume" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/SelectArrow"]
margin_right = 29.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 6 )
text = "<"

[node name="Restart" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/SelectArrow"]
margin_top = 61.0
margin_right = 29.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 7 )
text = "<"

[node name="Settings" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/SelectArrow"]
margin_top = 122.0
margin_right = 29.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 8 )

[node name="BackToMain" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2/SelectArrow"]
margin_top = 183.0
margin_right = 29.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 9 )
text = "<"
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Buttons/BackToMain" to="." method="_on_BackToMain_pressed"]
